confusion of deh highest ordahgit add KeywordSpotting_PraatEndeavour.ipynb  (also increased computation speed of spectrogram collection)

--- a/KeywordSpotting_PraatEndeavour.ipynb
+++ b/KeywordSpotting_PraatEndeavour.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 55,
    "id": "905a0ebd",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 56,
    "id": "42aeb908",
    "metadata": {
     "scrolled": true
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 57,
    "id": "ae5984a4",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "id": "374ff2c9",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "id": "b77a8f12",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "id": "b5430ad3",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "id": "772f98e4",
    "metadata": {},
    "outputs": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "id": "2515c39a",
    "metadata": {},
    "outputs": [
@@ -187,39 +187,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "538e1822",
+   "execution_count": 63,
+   "id": "c4470900",
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_spectrogram(text_sample_path):\n",
     "    stdb = pd.read_csv(text_sample_path)\n",
-    "    \n",
+    "\n",
     "    stdb = stdb.rename(columns={'File type = \"ooTextFile\"': 'val'})\n",
-    "    nx = int(stdb.iloc[3]['val'])\n",
-    "    ny = int(stdb.iloc[8]['val'])\n",
+    "    stdb_data = stdb.iloc[11:,:]\n",
+    "\n",
+    "    nx = int(stdb.iloc[8]['val'])\n",
+    "    ny = int(stdb.iloc[3]['val'])\n",
     "\n",
     "    new_spectrogram = np.array([[0]*ny]*nx, dtype='float')\n",
-    "    linecount = 11\n",
-    "    for y in range(ny):\n",
-    "        for x in range(nx):\n",
-    "            new_spectrogram[x][y] = float(stdb.iloc[linecount]['val'])\n",
-    "            linecount += 1\n",
+    "    for x in range(nx):\n",
+    "        new_spectrogram[x] = stdb_data.iloc[x*ny:x*ny+ny].squeeze().to_numpy(dtype='float')\n",
     "\n",
-    "    new_spectrogram = new_spectrogram.T\n",
     "    log_new_spectrogram = np.log(new_spectrogram)\n",
-    "    \n",
     "    return new_spectrogram, log_new_spectrogram"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "21390af1",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
+   "execution_count": 64,
+   "id": "88ad78f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(160, 991)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_spectrogram, log_new_spectrogram = get_spectrogram(text_samples[76])\n",
     "new_spectrogram.shape"
@@ -227,17 +233,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "36f89d51",
+   "execution_count": 65,
+   "id": "fce10b79",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x2c5fc4c7310>"
+       "<matplotlib.image.AxesImage at 0x264e37290a0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -260,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "id": "6bc87543",
    "metadata": {},
    "outputs": [],
@@ -277,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 67,
    "id": "24b141cc",
    "metadata": {},
    "outputs": [
@@ -300,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 68,
    "id": "bb8d4f52",
    "metadata": {},
    "outputs": [],
@@ -333,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 69,
    "id": "89d94197",
    "metadata": {},
    "outputs": [
@@ -356,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 70,
    "id": "502a2a4a",
    "metadata": {},
    "outputs": [],
@@ -400,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 71,
    "id": "49a49080",
    "metadata": {},
    "outputs": [
@@ -434,9 +440,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4700271e",
+   "metadata": {},
+   "source": [
+    "# Plan\n",
+    "- Make obtaining spectrograms faster so we can get batches of them\n",
+    "- Use ranging to mask the formant features\n",
+    "- Analyze resulting formant features, and see what operations to do with them to distinguish them best"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d0bc7c1",
+   "id": "c6ee255d",
    "metadata": {},
    "outputs": [],
    "source": []
